alignment fix for small laptops

--- a/css/theme/door3.css
+++ b/css/theme/door3.css
@@ -183,7 +183,3 @@ body {
   -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
-
-.reveal .slides {
-  top: 40%;
-}
